sandbox-codebase/objects/heymarket__Team__c/heymarket__Team__c.object-meta.xml
<CustomObject>
    <description>Stores mapping for fields for a given sync object.</description>
    <label>Team</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>