sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Conversational_Sync__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Conversational_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether to perform a full record sync or sync only records with conversations</description>
    <label>Conversational Sync</label>
    <type>Checkbox</type>
</CustomField>