sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Default_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Default_Account_Type__c</fullName>
    <label>Default Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>