sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Default_Inbox_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Default_Inbox_Id__c</fullName>
    <description>It will store default inbox id</description>
    <label>Default Inbox Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>