sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Heymarket_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_Id__c</fullName>
    <description>It will store team id from heymarket</description>
    <label>Heymarket Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>