sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Inbox_Ids_For_Msg_Sync__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Inbox_Ids_For_Msg_Sync__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Inbox Ids For Message sync</label>
    <length>100</length>
    <type>Text</type>
</CustomField>