sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Log_Message_Activity_in_Tasks__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Log_Message_Activity_in_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox will be used to check if a message store activity should create a task or not.</description>
    <label>Log Message Activity in Tasks</label>
    <type>Checkbox</type>
</CustomField>