sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__On_Message_Sync__c.field-meta.xml
<CustomField>
    <fullName>heymarket__On_Message_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox will be used to check message sync is on or not.</description>
    <label>On Message Sync</label>
    <type>Checkbox</type>
</CustomField>