sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__On_New_HM_Contact__c.field-meta.xml
<CustomField>
    <fullName>heymarket__On_New_HM_Contact__c</fullName>
    <description>What happens when a new Contact comes from Heymarket, it should create a Lead, Contact or do nothing</description>
    <inlineHelpText>What happens when a new Contact comes from Heymarket, it should create a Lead, Contact or do nothing</inlineHelpText>
    <label>On New HM Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>