sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__On_Unknown_Message__c.field-meta.xml
<CustomField>
    <fullName>heymarket__On_Unknown_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create record in salesforce based on Auto Create, when message arrives from unknown contact.</description>
    <inlineHelpText>Create record in salesforce based on Auto Create, when message arrives from unknown contact.</inlineHelpText>
    <label>On Unknown Message</label>
    <type>Checkbox</type>
</CustomField>