sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Frequency__c</fullName>
    <label>Sync Frequency</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>