sandbox-codebase/objects/heymarket__Team__c/fields/heymarket__Sync_Frequency_UOM__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Frequency_UOM__c</fullName>
    <label>Sync Frequency UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>